# crop-pest-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  hydra_config.yaml  pyproject.toml
.dvc/: config
configs/: configs.yaml  infer.yaml  train.yaml  viz.yaml
configs/data/: default.yaml
configs/infer/: default.yaml
configs/model/: default.yaml
configs/paths/: default.yaml
configs/train/: default.yaml
configs/viz/: default.yaml
crop_pest_detection/: cli.py  train.py  visualize.py
crop_pest_detection/data/: datamodule.py  yolo_dataset.py
crop_pest_detection/eval/: coco_eval.py
crop_pest_detection/export/: export_onnx.py  export_torchscript.py  wrapper.py
crop_pest_detection/models/: detector.py  lit_module.py
crop_pest_detection/pipelines/: export_pipeline.py  infer_pipeline.py  train_pipeline.py  triton_pipeline.py  visualize_pipeline.py
crop_pest_detection/triton/: config_writer.py
crop_pest_detection/utils/: mlflow_io.py
model_repository/pest_detector/: config.pbtxt
raw_data/: agro_pest.dvc
scripts/: sanity_data.py  sanity_onnx.py
